// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should correctly render recipe 1`] = `
<li
  className="py1 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ⌑
  </span>
  <span>
    Test Recipe
  </span>
  <span>
     - 
  </span>
  <span>
    Test category
  </span>
</li>
`;

exports[`<RecipeListItem /> Should not break if no recipe/details passed in 1`] = `
<li
  className="py1 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ⌑
  </span>
  <span />
  <span>
     - 
  </span>
  <span />
</li>
`;

exports[`<RecipeListItem /> Should render favorite state 1`] = `
<li
  className="py1 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    aria-label="favorite"
    className="mr1"
    onClick={[Function]}
    role="img"
  >
    ⭐
  </span>
  <span>
    Test Recipe
  </span>
  <span>
     - 
  </span>
  <span>
    Test category
  </span>
</li>
`;
